--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<script src="chinmayabell.js?123"></script>
-dank memes
+<script src="chinmayabell.js?1234"></script>
+dank memes lel
 </body>
 </html>
