--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<script src="chinmayabell.js?test"></script>
+<script src="chinmayabell.js?dankmemes"></script>
 <input type="button" value="Play" onClick="runOnTimes(playBell, getTime);" />
+<p id="dank">Not started</p>
 </body>
 </html>
