--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <p id="dank">Not started</p>
-<script src="chinmayabell.js?dankestofthedankmemes"></script>
+<script src="chinmayabell.js?lolidekanymore"></script>
 </body>
 </html>
